Adding player movement

--- a/DGM1610 Restart/Assembly-CSharp.csproj
+++ b/DGM1610 Restart/Assembly-CSharp.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\BombEffect.cs" />
     <Compile Include="Assets\Scripts\CatClass.cs" />
+    <Compile Include="Assets\Scripts\ControllerRigidBody.cs" />
+    <Compile Include="Assets\Scripts\ControllerTransform.cs" />
     <Compile Include="Assets\Scripts\DogClass.cs" />
     <Compile Include="Assets\Scripts\Float1.cs" />
     <Compile Include="Assets\Scripts\FollowPlayer.cs" />
@@ -66,6 +68,7 @@
     <Compile Include="Assets\Scripts\MagicEffect.cs" />
     <Compile Include="Assets\Scripts\MouseEvents.cs" />
     <Compile Include="Assets\Scripts\ParticleControl.cs" />
+    <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\PlayerMagic.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
