particle effect and double jump

--- a/DGM1610 Restart/Assembly-CSharp.csproj
+++ b/DGM1610 Restart/Assembly-CSharp.csproj
@@ -57,21 +57,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\BombEffect.cs" />
     <Compile Include="Assets\Scripts\CatClass.cs" />
     <Compile Include="Assets\Scripts\ControllerRigidBody.cs" />
     <Compile Include="Assets\Scripts\ControllerTransform.cs" />
     <Compile Include="Assets\Scripts\DogClass.cs" />
+    <Compile Include="Assets\Scripts\Explosion.cs" />
     <Compile Include="Assets\Scripts\Float1.cs" />
     <Compile Include="Assets\Scripts\FollowPlayer.cs" />
     <Compile Include="Assets\Scripts\Functions.cs" />
-    <Compile Include="Assets\Scripts\MagicEffect.cs" />
     <Compile Include="Assets\Scripts\MouseEvents.cs" />
     <Compile Include="Assets\Scripts\ParticleControl.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\PlayerMagic.cs" />
+    <Compile Include="Assets\Scripts\PowerUpParticles.cs" />
+    <Compile Include="Assets\Scripts\PowerUpsBombEffect.cs" />
     <Compile Include="Assets\Scripts\PowerUpsHealth.cs" />
+    <Compile Include="Assets\Scripts\PowerUpsMagicEffect.cs" />
     <Compile Include="Assets\Scripts\TriggerEvents.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>/Users/samclose/Desktop/DGM1610-fall-2019/DMG-1610-2019-SamuelClose/DGM1610 Restart/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
