Health Using Scriptiable Objects

--- a/DGM1610 Restart/Assembly-CSharp.csproj
+++ b/DGM1610 Restart/Assembly-CSharp.csproj
@@ -62,19 +62,19 @@
     <Compile Include="Assets\Scripts\ControllerTransform.cs" />
     <Compile Include="Assets\Scripts\DogClass.cs" />
     <Compile Include="Assets\Scripts\Explosion.cs" />
-    <Compile Include="Assets\Scripts\Float1.cs" />
     <Compile Include="Assets\Scripts\FollowPlayer.cs" />
     <Compile Include="Assets\Scripts\Functions.cs" />
+    <Compile Include="Assets\Scripts\HealthPack.cs" />
     <Compile Include="Assets\Scripts\IntDataObject.cs" />
     <Compile Include="Assets\Scripts\MouseEvents.cs" />
     <Compile Include="Assets\Scripts\ParticleControl.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\PlayerHealth.cs" />
-    <Compile Include="Assets\Scripts\PlayerMagic.cs" />
+    <Compile Include="Assets\Scripts\PlayerDisplay.cs" />
     <Compile Include="Assets\Scripts\PowerUpParticles.cs" />
     <Compile Include="Assets\Scripts\PowerUpsBombEffect.cs" />
     <Compile Include="Assets\Scripts\PowerUpsHealth.cs" />
     <Compile Include="Assets\Scripts\PowerUpsMagicEffect.cs" />
+    <Compile Include="Assets\Scripts\Stats.cs" />
     <Compile Include="Assets\Scripts\TriggerEvents.cs" />
     <Compile Include="Assets\Scripts\UITextController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
