--- a/DGM1610 Restart/Assembly-CSharp.csproj
+++ b/DGM1610 Restart/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerDisplay.cs" />
     <Compile Include="Assets\Scripts\PlayerMotor.cs" />
+    <Compile Include="Assets\Scripts\PlayerSpawn.cs" />
     <Compile Include="Assets\Scripts\PowerUpParticles.cs" />
     <Compile Include="Assets\Scripts\PowerUpsBombEffect.cs" />
     <Compile Include="Assets\Scripts\PowerUpsHealth.cs" />
