SCO increase, pants shirt and weapons

--- a/DGM1610 Restart/Assembly-CSharp.csproj
+++ b/DGM1610 Restart/Assembly-CSharp.csproj
@@ -57,32 +57,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ConsumableScripts\Explosion.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\HealthPack.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\ManaPotion.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\PowerUpParticles.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\PowerUpsBombEffect.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\PowerUpsHealth.cs" />
+    <Compile Include="Assets\Scripts\ConsumableScripts\PowerUpsMagicEffect.cs" />
     <Compile Include="Assets\Scripts\ControllerRigidBody.cs" />
     <Compile Include="Assets\Scripts\ControllerTransform.cs" />
-    <Compile Include="Assets\Scripts\Explosion.cs" />
-    <Compile Include="Assets\Scripts\GameArtData.cs" />
-    <Compile Include="Assets\Scripts\HealthPack.cs" />
+    <Compile Include="Assets\Scripts\DataScripts\ClothesData.cs" />
+    <Compile Include="Assets\Scripts\DataScripts\GameArtData.cs" />
+    <Compile Include="Assets\Scripts\DataScripts\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\DataScripts\Stats.cs" />
+    <Compile Include="Assets\Scripts\DataScripts\WeaponData.cs" />
     <Compile Include="Assets\Scripts\InClassScripts\CatClass.cs" />
     <Compile Include="Assets\Scripts\InClassScripts\DogClass.cs" />
     <Compile Include="Assets\Scripts\InClassScripts\FollowPlayer.cs" />
     <Compile Include="Assets\Scripts\InClassScripts\Functions.cs" />
     <Compile Include="Assets\Scripts\InClassScripts\IntDataObject.cs" />
-    <Compile Include="Assets\Scripts\InClassScripts\PlayerData.cs" />
-    <Compile Include="Assets\Scripts\ManaPotion.cs" />
     <Compile Include="Assets\Scripts\MouseEvents.cs" />
     <Compile Include="Assets\Scripts\ParticleControl.cs" />
     <Compile Include="Assets\Scripts\PlayerControl.cs" />
-    <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\PlayerData.cs" />
     <Compile Include="Assets\Scripts\PlayerDisplay.cs" />
-    <Compile Include="Assets\Scripts\PlayerDisplay1.cs" />
-    <Compile Include="Assets\Scripts\PlayerMotor.cs" />
-    <Compile Include="Assets\Scripts\PlayerSpawn.cs" />
-    <Compile Include="Assets\Scripts\PowerUpParticles.cs" />
-    <Compile Include="Assets\Scripts\PowerUpsBombEffect.cs" />
-    <Compile Include="Assets\Scripts\PowerUpsHealth.cs" />
-    <Compile Include="Assets\Scripts\PowerUpsMagicEffect.cs" />
-    <Compile Include="Assets\Scripts\Stats.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\PlayerDisplay1.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\PlayerMotor.cs" />
     <Compile Include="Assets\Scripts\TriggerEvents.cs" />
     <Compile Include="Assets\Scripts\UITextController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
